--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
 <body>
     <header class="index-header">
         <div class="container">
-            <a class="index-upper-logo" href="https://maksymilianbilski.github.io/goit-markup-hw-04/"><span
+            <a class="index-upper-logo" href="https://maksymilianbilski.github.io/goit-markup-hw-05/"><span
                     class="index-top-web">Web</span>Studio</a>
             <div class="index-header-div">
                 <nav>
                     <ul class="index-nav list">
-                        <li class="index-nav-li"><a href="https://maksymilianbilski.github.io/goit-markup-hw-04/"
-                                class="index-upper-link">Agencja</a>
+                        <li class="index-nav-li"><a href="https://maksymilianbilski.github.io/goit-markup-hw-05/"
+                                class="index-upper-link index-active">Agencja</a>
                         </li>
-                        <li class="index-nav-li"><a href="https://maksymilianbilski.github.io/goit-markup-hw-04/portfolio.html"
+                        <li class="index-nav-li"><a
+                                href="https://maksymilianbilski.github.io/goit-markup-hw-05/portfolio.html"
                                 class="index-upper-link">Portfolio</a></li>
-                        <li class="index-nav-li"><a href="https://maksymilianbilski.github.io/goit-markup-hw-04/"
+                        <li class="index-nav-li"><a href="https://maksymilianbilski.github.io/goit-markup-hw-05/"
                                 class="index-upper-link">Kontakt</a>
                         </li>
                     </ul>
@@ -39,14 +40,16 @@
             </div>
             <ul class="index-header-contacts list">
                 <li class="index-header-li">
-                    <a class="index-header-li" href="mailto:info@devstudio.com"> <svg class="index-header-li" width="16" height="12">
-                        <use href="images/sprite.svg#icon-envelope"></use>
-                    </svg>info@devstudio.com</a>
+                    <a class="index-header-li" href="mailto:info@devstudio.com"> <svg class="index-header-li" width="16"
+                            height="12">
+                            <use href="images/sprite.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com</a>
                 </li>
                 <li class="index-header-li">
-                    <a class="index-header-li" href="tel:+48111111111"> <svg class="index-smartphone-icon" width="10" height="16">
-                        <use href="images/sprite.svg#icon-smartphone"></use>
-                    </svg>+48 111 111 111</a>
+                    <a class="index-header-li" href="tel:+48111111111"> <svg class="index-smartphone-icon" width="10"
+                            height="16">
+                            <use href="images/sprite.svg#icon-smartphone"></use>
+                        </svg>+48 111 111 111</a>
                 </li>
             </ul>
         </div>
@@ -114,22 +117,27 @@
                     <li>
                         <img src="images/img1.jpg" width="370" height="294"
                             alt="ktoś pisze na klawiaturze, a przed sobą ma tableta i monitor">
-                    <div class="about-sign">
-                        <div></div><p>APLIKACJE KOMPUTEROWE</p></div>
-                        </li>
+                        <div class="about-sign">
+                            <div></div>
+                            <p>APLIKACJE KOMPUTEROWE</p>
+                        </div>
+                    </li>
                     <li>
                         <img src="images/img2.jpg" width="370" height="294"
                             alt="ktoś trzyma telefon w dłoni i siedzi przy laptopie">
-                    <div class="about-sign"> <div></div> <p>APLIKACJE MOBILNE</p> </div>
-                        </li>
+                        <div class="about-sign">
+                            <div></div>
+                            <p>APLIKACJE MOBILNE</p>
+                        </div>
+                    </li>
                     <li>
                         <img src="images/img3.jpg" width="370" height="294"
                             alt="pokazany tablet z paletą barw złożoną z małych pięciokątów w jeden duży pięciokąt">
-                    <div class="about-sign">
-                        <div></div>
-                        <p>ROZWIĄZANIA GRAFICZNE</p>
-                    </div>
-                        </li>
+                        <div class="about-sign">
+                            <div></div>
+                            <p>ROZWIĄZANIA GRAFICZNE</p>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -309,7 +317,7 @@
     <footer class="index-footer">
         <div class="container">
             <section class="index-footer1">
-                <a class="index-bottom-logo" href="https://maksymilianbilski.github.io/goit-markup-hw-04/"><span
+                <a class="index-bottom-logo" href="https://maksymilianbilski.github.io/goit-markup-hw-05/"><span
                         class="index-bottom-web">Web</span>Studio</a>
                 <address class="index-address">m. Warszawa, Aleje Jerozolimskie 21</address>
                 <ul class="index-footer-contacts list">
@@ -344,11 +352,13 @@
             </section>
         </div>
     </footer>
-                    <div class="backdrop is-hidden" data-modal>
-                        <div class="modal">
-                            <button class="close-btn" type="button" data-modal-close><div>X</div></button>
-                        </div>
-                    </div>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button class="index-close-btn" type="button" data-modal-close>
+                <div>X</div>
+            </button>
+        </div>
+    </div>
     <script src="./js/modal.js"></script>
 </body>
 
