--- a/portfolio.html
+++ b/portfolio.html
@@ -25,12 +25,12 @@
                         class="portfolio-upper-web">Web</span>Studio</a>
                 <nav>
                     <ul class="portfolio-nav list">
-                        <li><a href="https://maksymilianbilski.github.io/goit-markup-hw-04/"
+                        <li><a href="https://maksymilianbilski.github.io/goit-markup-hw-05/"
                                 class="portfolio-upper-link">Agencja</a>
                         </li>
-                        <li><a href="https://maksymilianbilski.github.io/goit-markup-hw-04/portfolio.html"
-                                class="portfolio-upper-link">Portfolio</a></li>
-                        <li><a href="https://maksymilianbilski.github.io/goit-markup-hw-04/"
+                        <li><a href="https://maksymilianbilski.github.io/goit-markup-hw-05/portfolio.html"
+                                class="portfolio-upper-link portfolio-active">Portfolio</a></li>
+                        <li><a href="https://maksymilianbilski.github.io/goit-markup-hw-05/"
                                 class="portfolio-upper-link">Kontakty</a>
                         </li>
                     </ul>
@@ -71,10 +71,16 @@
                 <ul class="portfolio-signedphotos-list list">
                     <li class="portfolio-signedphotos-li">
                         <div class="top-technocrack">
-                            <figure> <div class="portfolio-overlay-1"><img class="img1" src="images/imag1.jpg" width="370" height="294"
-                                    alt="Zdjęcie pokazujące włączonego laptopa. Na jego ekranie widać 3 osoby obok siebie - dwie kobiety po lewej i prawej, oraz jednego mężczyznę po środku.">
-                                <div class="portfolio-overlay"><p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                                do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div></div>
+                            <figure>
+                                <div class="portfolio-overlay-1"><img class="img1" src="images/imag1.jpg" width="370"
+                                        height="294"
+                                        alt="Zdjęcie pokazujące włączonego laptopa. Na jego ekranie widać 3 osoby obok siebie - dwie kobiety po lewej i prawej, oraz jednego mężczyznę po środku.">
+                                    <div class="portfolio-overlay">
+                                        <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                            koronawirusa. Firmy wykorzystują tę platformę
+                                            do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                                    </div>
+                                </div>
                                 <figcaption class="portfolio-figcaption">
                                     <h2>Technocrack</h2>
                                     <p>Strona internetowa</p>
@@ -83,25 +89,33 @@
                         </div>
                     </li>
                     <li class="portfolio-signedphotos-li">
-                        <figure><div class="portfolio-overlay-1"><img src="images/imag2.jpg" width="370" height="294"
-                                alt="Zdjęcie pokazujące dwóch zawodników grających w koszykówkę. Jeden z nich ma fioletowy strój, drugi biały.">
-                                <div class="portfolio-overlay"><p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
-                                do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p></div></div><figcaption class="portfolio-figcaption">
+                        <figure>
+                            <div class="portfolio-overlay-1"><img src="images/imag2.jpg" width="370" height="294"
+                                    alt="Zdjęcie pokazujące dwóch zawodników grających w koszykówkę. Jeden z nich ma fioletowy strój, drugi biały.">
+                                <div class="portfolio-overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę platformę
+                                        do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                                </div>
+                            </div>
+                            <figcaption class="portfolio-figcaption">
                                 <h2>Grafika New Orlean vs Golden Star</h2>
                                 <p>Dizajn</p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="portfolio-signedphotos-li">
-                        <figure><div class="portfolio-overlay-1"><img src="images/imag3.jpg" width="370" height="294"
-                                alt="Zdjęcie pokazujące logo restauracji. Kolejno od góry jest na nim napisane: The Seafood est 2001 RESTAURANT.">
-                            <div class="portfolio-overlay">
-                                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę
-                                    platformę
-                                    do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                        <figure>
+                            <div class="portfolio-overlay-1"><img src="images/imag3.jpg" width="370" height="294"
+                                    alt="Zdjęcie pokazujące logo restauracji. Kolejno od góry jest na nim napisane: The Seafood est 2001 RESTAURANT.">
+                                <div class="portfolio-overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę
+                                        platformę
+                                        do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                                </div>
                             </div>
-                            </div>
-                                <figcaption class="portfolio-figcaption">
+                            <figcaption class="portfolio-figcaption">
                                 <h2>Restauracja Seafood</h2>
                                 <p>Aplikacja</p>
                             </figcaption>
@@ -110,89 +124,100 @@
                     <li class="portfolio-signedphotos-li">
                         <figure>
                             <div class="portfolio-overlay-1"><img src="images/imag4.jpg" width="370" height="294"
-                                alt="Zdjęcie pokazujące czarne słuchawki nauszne.">
-                        <div class="portfolio-overlay">
-                            <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę
-                                platformę
-                                do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
-                        </div>
-                        </div>
-                                <figcaption class="portfolio-figcaption">
+                                    alt="Zdjęcie pokazujące czarne słuchawki nauszne.">
+                                <div class="portfolio-overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę
+                                        platformę
+                                        do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                                </div>
+                            </div>
+                            <figcaption class="portfolio-figcaption">
                                 <h2>Projekt Prime</h2>
                                 <p>Marketing</p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="portfolio-signedphotos-li">
-                        <figure><div class="portfolio-overlay-1"><img src="images/imag5.jpg" width="370" height="294"
-                                alt="Zdjęcie pokazujące dwa pudełka - białe z żółtą elipsą i napisami, oraz brązowe z napisami.">
-                            <div class="portfolio-overlay">
-                                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę
-                                    platformę
-                                    do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                        <figure>
+                            <div class="portfolio-overlay-1"><img src="images/imag5.jpg" width="370" height="294"
+                                    alt="Zdjęcie pokazujące dwa pudełka - białe z żółtą elipsą i napisami, oraz brązowe z napisami.">
+                                <div class="portfolio-overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę
+                                        platformę
+                                        do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                                </div>
                             </div>
-                            </div>
-                                <figcaption class="portfolio-figcaption">
+                            <figcaption class="portfolio-figcaption">
                                 <h2>Projekt portfolio-overlay-1es</h2>
                                 <p>Aplikacja</p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="portfolio-signedphotos-li">
-                        <figure><div class="portfolio-overlay-1"><img src="images/imag6.jpg" width="370" height="294"
-                                alt="Zdjęcie pokazujące włączony monitor.">
-                        <div class="portfolio-overlay">
-                            <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę
-                                platformę
-                                do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
-                        </div>
-                        </div>
-                                <figcaption class="portfolio-figcaption">
+                        <figure>
+                            <div class="portfolio-overlay-1"><img src="images/imag6.jpg" width="370" height="294"
+                                    alt="Zdjęcie pokazujące włączony monitor.">
+                                <div class="portfolio-overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę
+                                        platformę
+                                        do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                                </div>
+                            </div>
+                            <figcaption class="portfolio-figcaption">
                                 <h2>Inspiration has no Borders</h2>
                                 <p>Strona internetowa</p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="portfolio-signedphotos-li">
-                        <figure><div class="portfolio-overlay-1"><img src="images/imag7.jpg" width="370" height="294"
-                                alt="Zdjęcie pokazujące otwartą książkę. Są widoczne dwie strony. Na lewej widać kobietę suszącą sobie włosy suszarką. Na drugiej dwie kobiety odwrócone tyłem do widza i nagłówek Iam Limited Edition.">
-                        <div class="portfolio-overlay">
-                            <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę
-                                platformę
-                                do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
-                        </div>
-                        </div>
-                                <figcaption class="portfolio-figcaption">
+                        <figure>
+                            <div class="portfolio-overlay-1"><img src="images/imag7.jpg" width="370" height="294"
+                                    alt="Zdjęcie pokazujące otwartą książkę. Są widoczne dwie strony. Na lewej widać kobietę suszącą sobie włosy suszarką. Na drugiej dwie kobiety odwrócone tyłem do widza i nagłówek Iam Limited Edition.">
+                                <div class="portfolio-overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę
+                                        platformę
+                                        do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                                </div>
+                            </div>
+                            <figcaption class="portfolio-figcaption">
                                 <h2>Magazin Limited Edition</h2>
                                 <p>Dizajn</p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="portfolio-signedphotos-li">
-                        <figure><div class="portfolio-overlay-1"><img src="images/imag8.jpg" width="370" height="294"
-                                alt="Zdjęcie pokazujące białą zawieszkę, ze złotym wisiorkiem i czarnym napisem labeltag.">
-                        <div class="portfolio-overlay">
-                            <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę
-                                platformę
-                                do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
-                        </div>
-                        </div>
-                                <figcaption class="portfolio-figcaption">
+                        <figure>
+                            <div class="portfolio-overlay-1"><img src="images/imag8.jpg" width="370" height="294"
+                                    alt="Zdjęcie pokazujące białą zawieszkę, ze złotym wisiorkiem i czarnym napisem labeltag.">
+                                <div class="portfolio-overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę
+                                        platformę
+                                        do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                                </div>
+                            </div>
+                            <figcaption class="portfolio-figcaption">
                                 <h2>Projekt LAB</h2>
                                 <p>Marketing</p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="portfolio-signedphotos-li">
-                        <figure><div class="portfolio-overlay-1"><img src="images/imag9.jpg" width="370" height="294"
-                                alt="Zdjęcie pokazujące włączonego laptopa, na którego klawiaturze ktoś trzyma dłonie. Na jego ekranie widać reklamę(lub stronę) z nagłówkiem growing business. Po lewej stronie są okulary.">
-                        <div class="portfolio-overlay">
-                            <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę
-                                platformę
-                                do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
-                        </div>
-                        </div>
-                                <figcaption class="portfolio-figcaption">
+                        <figure>
+                            <div class="portfolio-overlay-1"><img src="images/imag9.jpg" width="370" height="294"
+                                    alt="Zdjęcie pokazujące włączonego laptopa, na którego klawiaturze ktoś trzyma dłonie. Na jego ekranie widać reklamę(lub stronę) z nagłówkiem growing business. Po lewej stronie są okulary.">
+                                <div class="portfolio-overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę
+                                        platformę
+                                        do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                                </div>
+                            </div>
+                            <figcaption class="portfolio-figcaption">
                                 <h2>Growing Business</h2>
                                 <p>Aplikacja</p>
                             </figcaption>
@@ -205,7 +230,7 @@
     <footer class="portfolio-footer">
         <div class="container">
             <section class="portfolio-footer1">
-                <a href="https://maksymilianbilski.github.io/goit-markup-hw-04/" class="portfolio-bottom-logo"><span
+                <a href="https://maksymilianbilski.github.io/goit-markup-hw-05/" class="portfolio-bottom-logo"><span
                         class="portfolio-bottom-web">Web</span>Studio</a>
                 <address class="portfolio-address">m. Warszawa, Aleje Jerozolimskie 21</address>
                 <ul class="portfolio-footer-contacts list">
